use same example.fun to drive both ocaml and haskell code

--- a/ocaml/lib/dune
+++ b/ocaml/lib/dune
@@ -1,3 +1,11 @@
 (library
  (name lib)
  (libraries unix))
+
+(rule
+  (with-stdout-to repl.ml
+    (progn
+      (echo "open Prim\n")
+      (echo "type 'a my_list = Nil | Cons of 'a * 'a my_list\n")
+      (cat ../example.fun)
+      )))
