ocaml: repl.ml -> example.ml

--- a/ocaml/lib/dune
+++ b/ocaml/lib/dune
@@ -3,7 +3,7 @@
  (libraries unix))
 
 (rule
-  (with-stdout-to repl.ml
+  (with-stdout-to example.ml
     (progn
       (echo "open Prim\n")
       (echo "type 'a my_list = Nil | Cons of 'a * 'a my_list\n")
