--- a/ocaml/example_lib/dune
+++ b/ocaml/example_lib/dune
@@ -6,7 +6,7 @@
 (rule
   (with-stdout-to shell.ml
     (progn
-      (echo "module M : sig val main : unit -> unit end = struct\n")
+      (echo "module F() : sig val main : unit -> unit end = struct\n")
       (echo "open Prim_lib.Prim\n")
       (echo "#1 \"shell.fun\"\n")
       (cat ../../shell.fun)
@@ -17,7 +17,7 @@
 (rule
   (with-stdout-to minimal.ml
     (progn
-      (echo "module M : sig val main : unit -> unit end = struct\n")
+      (echo "module F() : sig val main : unit -> unit end = struct\n")
       (echo "open Prim_lib.Prim\n")
       (echo "#1 \"minimal.fun\"\n")
       (cat ../../minimal.fun)
