--- a/ocaml/example_lib/dune
+++ b/ocaml/example_lib/dune
@@ -4,22 +4,31 @@
  (libraries prim_lib))
 
 (rule
+  (with-stdout-to tiny.ml
+    (progn
+      (echo "module F() : sig val main : unit -> unit end = struct\n")
+      (echo "open Prim_lib.Prim\n")
+      (echo "#1 \"tiny.fun\"\n")
+      (cat ../../examples/tiny.fun)
+      (echo "end\n")
+      )))
+
+(rule
+  (with-stdout-to small.ml
+    (progn
+      (echo "module F() : sig val main : unit -> unit end = struct\n")
+      (echo "open Prim_lib.Prim\n")
+      (echo "#1 \"small.fun\"\n")
+      (cat ../../examples/small.fun)
+      (echo "end\n")
+      )))
+
+(rule
   (with-stdout-to shell.ml
     (progn
       (echo "module F() : sig val main : unit -> unit end = struct\n")
       (echo "open Prim_lib.Prim\n")
       (echo "#1 \"shell.fun\"\n")
-      (cat ../../shell.fun)
-      (echo "end\n")
-      )))
-
-
-(rule
-  (with-stdout-to minimal.ml
-    (progn
-      (echo "module F() : sig val main : unit -> unit end = struct\n")
-      (echo "open Prim_lib.Prim\n")
-      (echo "#1 \"minimal.fun\"\n")
-      (cat ../../minimal.fun)
+      (cat ../../examples/shell.fun)
       (echo "end\n")
       )))
