new example which halts

--- a/ocaml/example_lib/dune
+++ b/ocaml/example_lib/dune
@@ -4,6 +4,16 @@
  (libraries prim_lib))
 
 (rule
+  (with-stdout-to halts.ml
+    (progn
+      (echo "module F() : sig val main : unit -> unit end = struct\n")
+      (echo "open Prim_lib.Prim\n")
+      (echo "#1 \"halts.fun\"\n")
+      (cat ../../examples/halts.fun)
+      (echo "end\n")
+      )))
+
+(rule
   (with-stdout-to tiny.ml
     (progn
       (echo "module F() : sig val main : unit -> unit end = struct\n")
