--- a/examples/dune
+++ b/examples/dune
@@ -1,13 +1,19 @@
 (cram
  (deps
   ../haskell/main.exe
+
+  ../ocaml/bin/halts.exe
   ../ocaml/bin/tiny.exe
   ../ocaml/bin/small.exe
   ../ocaml/bin/shell.exe
+
+  halts.fun
   tiny.fun
-  tiny.input
   small.fun
-  small.input
   shell.fun
+
+  halts.input
+  tiny.input
+  small.input
   shell.input
 ))
