--- a/check-eval/dune
+++ b/check-eval/dune
@@ -8,11 +8,11 @@
   ../ocaml/bin/small.exe
   ../ocaml/bin/tiny.exe
 
-  fib.fun
-  halts.fun
-  shell.fun
-  small.fun
-  tiny.fun
+  ../examples/fib.fun
+  ../examples/halts.fun
+  ../examples/shell.fun
+  ../examples/small.fun
+  ../examples/tiny.fun
 
   halts.input
   shell.input
