--- a/check-compile/dune
+++ b/check-compile/dune
@@ -9,6 +9,21 @@
 (rule (alias runtest) (action (diff small-2.ml small-2.gen)))
 (rule (alias runtest) (action (diff small-3.ml small-3.gen)))
 
+(rule (alias runtest) (action (diff halts-0.ml halts-0.gen)))
+(rule (alias runtest) (action (diff halts-1.ml halts-1.gen)))
+(rule (alias runtest) (action (diff halts-2.ml halts-2.gen)))
+(rule (alias runtest) (action (diff halts-3.ml halts-3.gen)))
+
+(rule (alias runtest) (action (diff fib-0.ml fib-0.gen)))
+(rule (alias runtest) (action (diff fib-1.ml fib-1.gen)))
+(rule (alias runtest) (action (diff fib-2.ml fib-2.gen)))
+(rule (alias runtest) (action (diff fib-3.ml fib-3.gen)))
+
+(rule (alias runtest) (action (diff shell-0.ml shell-0.gen)))
+(rule (alias runtest) (action (diff shell-1.ml shell-1.gen)))
+(rule (alias runtest) (action (diff shell-2.ml shell-2.gen)))
+(rule (alias runtest) (action (diff shell-3.ml shell-3.gen)))
+
 (rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-0.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -0))))
 (rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-1.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -1))))
 (rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-2.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -2))))
@@ -18,3 +33,18 @@
 (rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-1.gen (run ../haskell/main.exe ../examples/small.fun -compile -1))))
 (rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-2.gen (run ../haskell/main.exe ../examples/small.fun -compile -2))))
 (rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-3.gen (run ../haskell/main.exe ../examples/small.fun -compile -3))))
+
+(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-0.gen (run ../haskell/main.exe ../examples/halts.fun -compile -0))))
+(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-1.gen (run ../haskell/main.exe ../examples/halts.fun -compile -1))))
+(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-2.gen (run ../haskell/main.exe ../examples/halts.fun -compile -2))))
+(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-3.gen (run ../haskell/main.exe ../examples/halts.fun -compile -3))))
+
+(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-0.gen (run ../haskell/main.exe ../examples/fib.fun -compile -0))))
+(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-1.gen (run ../haskell/main.exe ../examples/fib.fun -compile -1))))
+(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-2.gen (run ../haskell/main.exe ../examples/fib.fun -compile -2))))
+(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-3.gen (run ../haskell/main.exe ../examples/fib.fun -compile -3))))
+
+(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-0.gen (run ../haskell/main.exe ../examples/shell.fun -compile -0))))
+(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-1.gen (run ../haskell/main.exe ../examples/shell.fun -compile -1))))
+(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-2.gen (run ../haskell/main.exe ../examples/shell.fun -compile -2))))
+(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-3.gen (run ../haskell/main.exe ../examples/shell.fun -compile -3))))
