prep for normalization

--- a/check-compile/dune
+++ b/check-compile/dune
@@ -25,26 +25,26 @@
 (rule (alias runtest) (action (diff shell-3.ml shell-3.gen)))
 
 (rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-0.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -0))))
-(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-1.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -1))))
-(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-2.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -2))))
-(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-3.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -3))))
+(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-1.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -1u))))
+(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-2.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -2u))))
+(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-3.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -3u))))
 
 (rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-0.gen (run ../haskell/main.exe ../examples/small.fun -compile -0))))
-(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-1.gen (run ../haskell/main.exe ../examples/small.fun -compile -1))))
-(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-2.gen (run ../haskell/main.exe ../examples/small.fun -compile -2))))
-(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-3.gen (run ../haskell/main.exe ../examples/small.fun -compile -3))))
+(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-1.gen (run ../haskell/main.exe ../examples/small.fun -compile -1u))))
+(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-2.gen (run ../haskell/main.exe ../examples/small.fun -compile -2u))))
+(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-3.gen (run ../haskell/main.exe ../examples/small.fun -compile -3u))))
 
 (rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-0.gen (run ../haskell/main.exe ../examples/halts.fun -compile -0))))
-(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-1.gen (run ../haskell/main.exe ../examples/halts.fun -compile -1))))
-(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-2.gen (run ../haskell/main.exe ../examples/halts.fun -compile -2))))
-(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-3.gen (run ../haskell/main.exe ../examples/halts.fun -compile -3))))
+(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-1.gen (run ../haskell/main.exe ../examples/halts.fun -compile -1u))))
+(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-2.gen (run ../haskell/main.exe ../examples/halts.fun -compile -2u))))
+(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-3.gen (run ../haskell/main.exe ../examples/halts.fun -compile -3u))))
 
 (rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-0.gen (run ../haskell/main.exe ../examples/fib.fun -compile -0))))
-(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-1.gen (run ../haskell/main.exe ../examples/fib.fun -compile -1))))
-(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-2.gen (run ../haskell/main.exe ../examples/fib.fun -compile -2))))
-(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-3.gen (run ../haskell/main.exe ../examples/fib.fun -compile -3))))
+(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-1.gen (run ../haskell/main.exe ../examples/fib.fun -compile -1u))))
+(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-2.gen (run ../haskell/main.exe ../examples/fib.fun -compile -2u))))
+(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-3.gen (run ../haskell/main.exe ../examples/fib.fun -compile -3u))))
 
 (rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-0.gen (run ../haskell/main.exe ../examples/shell.fun -compile -0))))
-(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-1.gen (run ../haskell/main.exe ../examples/shell.fun -compile -1))))
-(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-2.gen (run ../haskell/main.exe ../examples/shell.fun -compile -2))))
-(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-3.gen (run ../haskell/main.exe ../examples/shell.fun -compile -3))))
+(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-1.gen (run ../haskell/main.exe ../examples/shell.fun -compile -1u))))
+(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-2.gen (run ../haskell/main.exe ../examples/shell.fun -compile -2u))))
+(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-3.gen (run ../haskell/main.exe ../examples/shell.fun -compile -3u))))
