--- a/check-eval/dune
+++ b/check-eval/dune
@@ -2,11 +2,7 @@
  (deps
   ../haskell/main.exe
 
-  ../ocaml/bin/fib.exe
-  ../ocaml/bin/halts.exe
-  ../ocaml/bin/shell.exe
-  ../ocaml/bin/small.exe
-  ../ocaml/bin/tiny.exe
+  ../ocaml/bin/main.exe
 
   ../examples/fib.fun
   ../examples/halts.fun
