--- a/x86/Makefile
+++ b/x86/Makefile
@@ -20,6 +20,7 @@ NASM_FLAGS = -Werror
 	@ echo 'Assembling $@'
 	nasm $(NASM_FLAGS) -o $@ $< || rm -f $@
 
+.PRECIOUS:,build/%.asm
 ,build/%.asm: bare.asm ../compile-examples/expected/%-5.asm
 	@ echo 'Combining $@'
 	cat $^ > $@
