test-evaluation --> test/evaluation; example --> test/examples

--- a/test/evaluation/dune
+++ b/test/evaluation/dune
@@ -1,9 +1,6 @@
 (cram
  (deps
-  ../haskell/main.exe
-  ../ocaml/bin/main.exe
-
+  ../../haskell/main.exe
   (glob_files ../examples/*.fun)
   (glob_files input/*.input)
-
 ))
