test/evaluation/input --> test/inputs

--- a/test/evaluation/dune
+++ b/test/evaluation/dune
@@ -2,5 +2,5 @@
  (deps
   ../../haskell/main.exe
   (glob_files ../examples/*.fun)
-  (glob_files input/*.input)
+  (glob_files ../inputs/*.input)
 ))
