--- a/test/images/dune
+++ b/test/images/dune
@@ -3,7 +3,7 @@
 
 (rule
  (target dune.inc)
- (deps (glob_files ../test/examples/*.fun))
+ (deps (glob_files ../examples/*.fun))
  (action (with-stdout-to dune.inc (run generate/main.exe))))
 
 (subdir gen (dynamic_include ../dune.inc))
