ocaml/bin --> ocaml

--- a/ocaml/dune
+++ b/ocaml/dune
@@ -5,7 +5,7 @@
 
 (rule
  (target select.ml)
- (deps (glob_files ../../test/examples/*.fun))
+ (deps (glob_files ../test/examples/*.fun))
  (action (with-stdout-to select.ml (run generate/main.exe))))
 
 (subdir generate (executable (name main)))
