--- a/test/evaluation/dune
+++ b/test/evaluation/dune
@@ -1,6 +1,7 @@
 (cram
  (deps
   ../../haskell/main.exe
+  ../../ocaml/main.exe
   (glob_files ../examples/*.fun)
   (glob_files ../inputs/*.input)
 ))
