--- a/test/evaluation/dune
+++ b/test/evaluation/dune
@@ -2,6 +2,6 @@
  (deps
   ../../haskell/main.exe
   ../../ocaml/main.exe
-  (glob_files ../examples/*.fun)
+  (glob_files ../../examples/*.fun)
   (glob_files ../inputs/*.input)
 ))
