backport new Text-based Par4.hs from jenga to here

--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -33,6 +33,7 @@ default-extensions:
 - FlexibleContexts
 - GADTs
 - GeneralizedNewtypeDeriving
+- ImportQualifiedPost
 - InstanceSigs
 - LambdaCase
 - MultiWayIf
